updated name and packaging configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = phenograph
+name = graphicle
 version = 0.0.1
 
 [options]
-packages = phenograph
+packages = graphicle
 install_requires =
     numpy
     vector
