--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,16 @@
 [metadata]
 name = graphicle
-version = 0.0.1
+author = Jacan Chaplais
+author_email = jacanchaplais@gmail.com
+description = Encode particle physics data onto graph structures.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/jacanchaplais/graphicle
+license = BSD 3-Clause License
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
 
 [options]
 packages = graphicle
