added testing, and flake8 + mypy compliance #3

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,19 @@ install_requires =
     vector
     mcpid
     typicle>=0.1.2
+    networkx
 
 [options.extras_require]
 dev =
     pre-commit
+    flake8 ==3.9.2
+    tox ==3.24.3
+    pytest ==6.2.5
+    pytest-cov ==2.12.1
+    mypy ==0.910
+
+[options.package_data]
+graphicle = py.typed
+
+[flake8]
+max-line-length = 79
