--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,23 @@ write_to = "graphicle/_version.py"
 
 [tool.black]
 line-length = 79
+
+[tool.pytest.ini_options]
+addopts = "--cov=graphicle"
+testpaths = [
+    "tests",
+]
+
+[tool.mypy]
+mypy_path = "graphicle"
+check_untyped_defs = true
+disallow_any_generics = true
+ignore_missing_imports = true
+no_implicit_optional = true
+show_error_codes = true
+strict_equality = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unreachable = true
+warn_unused_configs = true
+no_implicit_reexport = true
