--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
 [options.extras_require]
 dev =
     pre-commit
+    numpy ==1.20.3
     flake8 ==3.9.2
     tox ==3.24.3
     pytest ==6.2.5
