--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8.12
-envlist = py37, py38, py39, py310, flake8, mypy
+envlist = py37, py38, py39, flake8, mypy
 isolated_build = true
 
 [gh-actions]
@@ -8,7 +8,6 @@ python =
     3.7: py37
     3.8: py38, mypy, flake8
     3.9: py39
-    3.10: py310
 
 [testenv]
 usedevelop = true
