--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ install_requires =
 
 [options.extras_require]
 dev =
-    pre-commit
+    pre-commit ==2.19.0
     numpy ==1.20
     flake8 ==3.9.2
     tox ==3.24.3
