marked as not zip safe #17

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+zip_safe = False
 packages = graphicle
 install_requires =
     numpy
