removed wheel from build

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -27,7 +27,7 @@ jobs:
         python -m
         build
         --sdist
-        --wheel
+        # --wheel
         --outdir dist/
         .
     # - name: Publish distributiono Test PyPI
