--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
 [options.extras_require]
 dev =
     pre-commit ==2.19.0
-    numpy ==1.20
+    numpy >=1.21
     flake8 ==3.9.2
     tox ==3.24.3
     pytest ==6.2.5
