--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
 packages = graphicle
 install_requires =
     attrs
-    numpy
+    numpy >=1.21
     scipy >=1.8.0
     vector
     mcpid
@@ -27,7 +27,6 @@ install_requires =
 [options.extras_require]
 dev =
     pre-commit ==2.19.0
-    numpy ==1.20
     flake8 ==3.9.2
     tox ==3.24.3
     pytest ==6.2.5
