minor doc updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ author_email = jacanchaplais@gmail.com
 description = Encode particle physics data onto graph structures.
 long_description = file: README.md
 long_description_content_type = text/markdown
+project_urls =
+    Documentation = https://graphicle.readthedocs.io
 url = https://github.com/jacanchaplais/graphicle
 license = BSD 3-Clause License
 classifiers =
