--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,12 +1,15 @@
 version: 2
 
+conda:
+  environment: docs/environment.yml
+
 build:
   os: "ubuntu-20.04"
   tools:
-    python: "3.8"
+    python: "mambaforge-4.10"
 
 sphinx:
-  fail_on_warning: true
+  fail_on_warning: false
 
 python:
   install:
