--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - numpy=1.23.3
   - scipy=1.9.3
   - networkx=2.8.8
-  - rich
+  - rich=12.6.0
   - pip:
     - mcpid ==0.0.4
     - typicle ==0.1.4
