--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,24 +8,26 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         pyver: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
-
-      - name: Install Conda environment from environment.yml
-        uses: mamba-org/provision-with-micromamba@main
+      - uses: mamba-org/setup-micromamba@v1
         with:
-          cache-env: true
-          extra-specs: |
+          micromamba-version: '1.3.1-0'
+          environment-name: test-env
+          create-args: >-
             python=${{ matrix.pyver }}
             pytest=6.2.5
             hypothesis=6.62.0
+          init-shell: bash
+          cache-environment: true
+          post-cleanup: 'all'
 
       - name: Install graphicle
-        shell: bash -l {0}
+        shell: bash -el {0}
         run: pip install .
 
       - name: Run tests
-        shell: bash -l {0}
+        shell: bash -el {0}
         run: pytest
