--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "rich",
     "deprecation",
     "more-itertools >=7.2.0",
+    "typing-extensions >=4.7.1",
 ]
 
 [project.urls]
