added tabulate and more-itertools to deps #150

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "rich",
     "deprecation",
     "typing-extensions >=4.7.1",
+    "more-itertools",
+    "tabulate",
 ]
 
 [project.urls]
