migrated pyjet to fastjet #158

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "mcpid",
     "typicle >=0.1.4",
     "networkx",
-    "pyjet ==1.9.0",
+    "fastjet >=3.4.1.2",
+    "awkward",
     "rich",
     "deprecation",
     "typing-extensions >=4.7.1",
