added libtool to micromamba env

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,7 @@ jobs:
           create-args: >-
             python=${{ matrix.pyver }}
             pytest>=6.2.5
+            libtool
           init-shell: bash
           cache-environment: true
           post-cleanup: 'all'
