--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,17 @@ dependencies = [
     "mcpid",
     "typicle >=0.1.4",
     "networkx",
-    "fastjet >=3.4.1.2",
     "awkward",
     "rich",
     "deprecation",
     "typing-extensions >=4.7.1",
     "more-itertools",
     "tabulate",
+]
+
+[project.optional-dependencies]
+fastjet = [
+    "fastjet >=3.4.1.2",
 ]
 
 [project.urls]
