removed libtool and env caching #188

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,9 +19,8 @@ jobs:
           create-args: >-
             python=${{ matrix.pyver }}
             pytest>=6.2.5
-            libtool
           init-shell: bash
-          cache-environment: true
+          cache-environment: false
           post-cleanup: 'all'
 
       - name: Install graphicle
