--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13]
-        pyver: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-latest, macos-13, macos-latest, windows-latest]
+        pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v3
       - uses: mamba-org/setup-micromamba@v1
@@ -19,7 +19,6 @@ jobs:
           create-args: >-
             python=${{ matrix.pyver }}
             pytest>=6.2.5
-            libtool
           init-shell: bash
           cache-environment: true
           post-cleanup: 'all'
